# clegling_project

./: Makefile  README.md  cli.py  pyproject.toml
project_clegling/: .flake8  .gitignore  Makefile  README.md  pyproject.toml
project_clegling/project_func/: cli.py
project_clegling/project_func/scripts/: main_base.py
